<resources>
    <string name="app_name">M07</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="last">Last</string>
    <string name="next">next</string>
    <string name="lov">🤍</string>
    <string name="sicat_image">sicat_image</string>
    <string name="refresh">⬆️ REFRESH ⬆️</string>
    <string name="this_is_a_textview">This is a TextView</string>
    <string name="like">❤️</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="linearlayout_text">This is a TextView in a LinearLayout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="gridlayout_text">TextView in a GridLayout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="framelayout_text">Esto es un TextView dentro de un FrameLayout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="relativelayout_text">TextView in a RelativeLayout</string>
    <string name="tablelayout_text">TextView in a TableLayout</string>
    <string name="table_layout">Table Layout</string>
    <string name="sfx">SFX</string>
    <string name="radio_check">Radio Check!</string>
    <string name="extended_buttons">Extended buttons</string>
    <string name="edu">Edu</string>
    <string name="victor">Victor</string>
    <string name="alex">Alex</string>
    <string name="submit">Submit</string>
    <string name="show_layouts">Show Layouts</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone number</string>
    <string name="data">DATA TREATMENT</string>
    <string name="data_treatment_consent">↓ DATA TREATMENT CONSENT ↓</string>
    <string name="register_form">REGISTER FORM</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="recycler">Recycler</string>
    <string name="useless">Useless</string>
    <string name="returntxt">Return</string>
    <string name="music">music</string>
</resources>