<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp">
    <ImageView
        android:id="@+id/img1"
        android:background="@drawable/sicat"
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:layout_below="@id/grid_layout"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sicat_image"
        />
    <ToggleButton
        android:id="@+id/btn1"
        android:textOn="@string/like"
        android:textOff="@string/lov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img1"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ConstraintLayout"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/btn_refresh"
            android:text="@string/refresh"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="5dp"
            />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btn_switch"
            android:text="@string/sfx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            />
    </LinearLayout>
</RelativeLayout>