<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameLayout">

    <Button
        android:id="@+id/button"
        android:text="@string/frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="512dp"
        />
    <ImageView
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:background="@drawable/sicat"
        android:layout_marginStart="96dp"
        android:layout_marginTop="256dp"
        android:contentDescription="@string/sicat_image" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/framelayout_text"
        android:layout_marginStart="48dp"
        android:layout_marginTop="630dp"
        />
</FrameLayout>