<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".TableLayout">

    <TableRow android:layout_marginHorizontal="20dp">
        <ImageView
            android:id="@+id/image"
            android:background="@drawable/sicat"
            android:layout_height="256dp"
            android:layout_width="match_parent"
            android:layout_span="2"
            android:contentDescription="@string/sicat_image" />
    </TableRow>
    <TableRow android:layout_marginHorizontal="20dp">
        <TextView
            android:id="@+id/text"
            android:text="@string/tablelayout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/button"
            android:text="@string/table_layout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
    </TableRow>
</TableLayout>