<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayout">

    <ImageView
        android:id="@+id/image"
        android:background="@drawable/sicat"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/sicat_image" />
    <Button
        android:id="@+id/button"
        android:text="@string/relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/image"

        />
    <TextView
        android:id="@+id/text"
        android:text="@string/relativelayout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button"
        />
</RelativeLayout>