<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    tools:context=".GridLayout">

    <ImageView
        android:id="@+id/image"
        android:layout_height="96dp"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@drawable/sicat"
        android:contentDescription="@string/sicat_image" />

    <Button
        android:id="@+id/button"
        android:text="@string/grid_layout"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
    <TextView
        android:id="@+id/text"
        android:text="@string/gridlayout_text"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />
</GridLayout>