<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Music">

    <LinearLayout
        android:layout_margin="12dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/goback"
            android:text="@string/returntxt"
            android:layout_weight="1"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="#3a488d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_weight="1"
            android:text="@string/useless"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="#3a488d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:text="@string/recycler"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:background="@drawable/formbg"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycled"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</LinearLayout>